# ASID

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  install-linux.sh  install-windows.bat  requirements.txt
.github/workflows/: cmake-linux.yml  cmake-windows.yml
VnE/: Start  Start.bat  Start.py  Start.pyw  debug.py  install  install.bat  requirements.txt
VnE/Source/: Facade.py  MainWindow.py  Observers.py  QtModels.py  Scenes.py  ShaderDataObjects.py  ShaderPipelines.py  UniformBuffers.py  point_class.py  text_render.py
VnE/Source/Extensions/: ChemPack.py  RDKit_descriptors.py  __init__.py  calc_pdb_charge.py  cut_prot_in_range.py  shelve_parser.py
VnE/Source/Extensions/ChemPack/: Db_bindings.py  Db_viewer.py  DrawerWidget.py  MoleculeClass.py  Sym_op.py  __init__.py  applyCls.py  assemble_cif.py  attach_cpprop.py  calcWidget.py  contacts.py  exportData.py  parsers.py  save_file.py  searchProcess.py  symm_poscar.py
VnE/Source/Extensions/ChemPack/ui/: Settings_dialog.py  Settings_dialog.ui  base_search_window.py  search_dialog.py  search_dialog.ui  select_mol_dialog.py
VnE/Source/Extensions/ChemPackSource/: AtomsPalette.py  BondLength.ini  CMakeLists.txt  Db_bindings.py  Db_viewer.py  DrawerWidget.py  MoleculeClass.py  Sym_op.py  attach_cpprop.py  contacts.py  dllmain.cpp  exportData.py  palette.json  parsers.py  save_file.py  searchProcess.py
VnE/Source/Extensions/ChemPackSource/ui/: Drawer_model_ui.py  Drawer_model_ui.ui  Settings_dialog.py  Settings_dialog.ui  base_search_window.py  base_search_window.ui  search_dialog.py  search_dialog.ui
VnE/Source/shaders/frag/: base.frag  lines.frag  text.frag
VnE/Source/shaders/tesc/: balls.tesc  bonds.tesc  test.tesc  tubes_32_cp.tesc
VnE/Source/shaders/tese/: balls.tese  bonds.tese  test.tese  tubes_32_cp.tese
VnE/Source/shaders/vert/: base.vert  lines.vert  plane.vert  test.vert  text.vert
api_database/: requirements.txt
api_database/django_project/: manage.py
api_database/django_project/api/: apps.py  fields.py  filters.py  pagination.py  serializers.py  substructure_filtration.py  tests.py  urls.py  views.py  viewsets.py
api_database/django_project/django_project/: asgi.py  loggers.py  settings.py  test_runner.py  urls.py  wsgi.py
api_database/django_project/modules/: apps.py
api_database/django_project/modules/c_modules/: cpplib.pyd
api_database/django_project/modules/gen2d/: gen2d.py
api_database/django_project/qc_structure/: admin.py  apps.py  models.py  vasp.py
api_database/django_project/qc_structure/export/: cif.py
api_database/django_project/qc_structure/migrations/: 0001_initial.py
api_database/django_project/structure/: admin.py  apps.py  download.py  models.py
api_database/django_project/structure/management/commands/: cif_db_update.py  symops.json
api_database/django_project/structure/management/commands/cif_db_update_modules/: _add_all_cif_data.py  _add_graphs_to_db.py  _add_substructure_filtration.py  _cifparser.py  _element_numbers.py  _make_graphs_c.py
api_database/django_project/structure/migrations/: 0001_initial.py  0002_alter_spacegroup_system.py  0002_initial.py  0003_alter_crystalandstructureinfo_sensitivity.py
api_database/django_project/users/: admin.py  apps.py  models.py
api_database/django_project/users/migrations/: 0001_initial.py
cpplib/: ASID_cpplib.sln  ASID_cpplib.vcxproj  ASID_cpplib.vcxproj.filters  BondLength.ini
cpplib/Tests/: CMakeLists.txt  EngineTest.cpp  Includes.cpp  MainTest.cpp  NodeTest.cpp
cpplib/src/BaseHeaders/: Currents.h  DebugMes.h  Support.h
cpplib/src/Classes/: Distances.h  Engine.h  FindGeometry.h  FindMolecules.h  Geometry.h  Hash.h  Interfaces.h  MoleculeGraph.h  SearchGraph.h
cpplib/src/Functions/: AllInOneAndCurrent.h  Functions.cpp  Functions.h  PythonInteface.cpp
cpplib/src/Platform/: Definitions.h
docs/: Install_on_Linux.md  Install_on_Windows.md  Manual.md  Web_admin_manual.md
module/: BondLength.ini  cpplib.pyd  cpplib.pyi  cpplib_doc.py
